# -

./: .gitignore  SPEC.md  pubspec.yaml  spec_ru.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  host-toolchain.cmake  llama_jni.cpp
assets/faiss/: PLACEHOLDER.txt
assets/games/: PLACEHOLDER.txt
assets/models/: PLACEHOLDER.txt
assets/prompts/: PLACEHOLDER.txt
ios/: Podfile
ios/Runner/: AppDelegate.swift  Runner-Bridging-Header.h
lib/: main.dart
lib/src/: app.dart
lib/src/core/bootstrap/: app_bootstrap.dart
lib/src/core/routing/: app_router.dart
lib/src/core/theme/: app_theme.dart  neural_brain.dart  starfield_background.dart  theme_controller.dart
lib/src/features/auth/presentation/: login_screen.dart
lib/src/services/ai/: model_service.dart  online_ai_service.dart  phi_service.dart  rag_service.dart
lib/src/services/alarm/: alarm_service.dart
lib/src/services/calendar/: calendar_service.dart
lib/src/services/connectivity/: connectivity_service.dart
lib/src/services/files/: file_ingest_service.dart
lib/src/services/notifications/: notification_service.dart
lib/src/services/speech/: speech_service.dart
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
tools/: build_llama.ps1  convert_embedding_model.py  create_rag_index.py  download_tokenizer.py  extract_embeddings.py  requirements.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  win32_window.cpp
(+14 files in other folders)
